# cheatengine-mac

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debug-entitlements.plist
include/cheatengine/cli/: command_line_interface.hpp
include/cheatengine/core/: application.hpp  errors.hpp
include/cheatengine/memory/: memory_region.hpp  memory_scanner.hpp  value_types.hpp
include/cheatengine/monitor/: value_monitor.hpp
include/cheatengine/process/: process_manager.hpp  security_manager.hpp
include/cheatengine/writer/: memory_writer.hpp
samples/: counter.cpp
src/: main.cpp
src/cli/: command_line_interface.cpp
src/core/: application.cpp  errors.cpp
src/memory/: memory_region.cpp  memory_scanner.cpp  value_types.cpp
src/monitor/: value_monitor.cpp
src/process/: process_manager.cpp  security_manager.cpp
src/writer/: memory_writer.cpp
tests/: CMakeLists.txt  integration_tests.cpp  unit_tests.cpp
